--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -15,7 +15,7 @@ scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 correct-downscaling=yes
 volume-max=100
-hwdec=auto-safe
+hwdec=vaapi
 ytdl-format=bestvideo[ext=mp4][height<=720]+bestaudio/best[height<=720]
 
 [extension.webm]
