--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,6 +1,4 @@
-#################################
-#             Shadows           #
-#################################
+## Shadown
 shadow = false;
 shadow-radius = 25;
 shadow-offset-x = -20;
@@ -15,27 +13,20 @@ shadow-exclude = [
 ];
 
 
-#################################
-#           Fading              #
-#################################
+## Shadow
 fading = false
 fade-in-step = 0.03;
-# fix
 fade-out-step = 0.02;
 fade-delta = 5;
 fade-exclude = [
 " class_g != 'Pcmanfm' && class_g != 'i3lock' && class_g != 'search' && class_g != 'lf' && class_g != 'mpv' && class_g != 'taskbook' && class_g != 'scratchpad' && name != 'Notification' && class_g != 'Dunst' && ! class_g ?= 'Notify-osd'&& class_g != 'Polybar' && class_g != 'Rofi' && name != 'dzen slave'"
 ]
 
-#################################
-#           Opacity              #
-#################################
-#inactive-opac	ity = 0.8;
+
+## Opacity
 inactive-dim = 0.4;
 active-dim = 0.0;
-#frame-opacity = 1.0;
 inactive-dim-fixed =true;
-#inactive-opacity-override = true;
 opacity-rule = [
     "00:class_g = 'dzen'"
     ];
@@ -43,30 +34,22 @@ opacity-rule = [
 focus-exclude = [
   "window_type = 'dock'",
   "class_g = 'Dmenu'",
-  "name = 'dzen slave'",
   "class_g = 'Dragon-drag-and-drop'",
   "class_g = 'search'",
   "class_g = 'slop'",
   "class_g = 'Rofi'",
   "class_g = 'Dunst'",
-  "class_g = 'Surf'",
   "class_g = 'Spotify'",
-  "class_g = 'scratchpad'",
   "class_g = 'discord'",
-  "class_g = 'vlc'",
-  "class_g = 'i3lock'",
   "class_g = 'Gimp'",
   "class_g = 'Zathura'",
   "class_g = 'Steam'",
   "class_g = 'mpv'",
-  "class_g = 'taskbook'",
   "class_g = 'lf'"
 ];
 
 
-#################################
-#           Blur                #
-#################################
+## Blur
 blur: {
   method = "kawase";
   strength = 5;
@@ -91,10 +74,10 @@ log-level = "warn";
 
 blur-kern = "3x3box";
 blur-background-exclude = [
- #"window_type = 'dock' && name != 'polybar-workspace_eDP1'",
+  "window_type = 'dock' && name != 'polybar-workspace_eDP1'",
   "window_type = 'dock'",
   "name = 'dzen slave'",
-  #"class_g = 'Rofi'",
+  "class_g = 'Rofi'",
   "class_g = 'slop'",
   "class_g = 'scratchpad'",
   "class_g = 'lf'",
@@ -104,9 +87,7 @@ blur-background-exclude = [
 
 corner-radius = 15.0;
 rounded-corners-exclude = [
- #"window_type = 'desktop'",
- #"name = 'polybar-workspace_eDP1'",
-  #"class_g = 'Pcmanfm'",
+  "name = 'polybar-workspace_eDP1'",
   "class_g = 'Dragon-drag-and-drop'",
   "window_type = 'popup_menu'",
   "window_type = 'dropdown_menu'",
