--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,19 +1,19 @@
 ## Shadown
-shadow = false;
+shadow = true;
 shadow-radius = 25;
 shadow-offset-x = -20;
 shadow-offset-y = -15;
 shadow-red = .1
 shadow-exclude = [
   "name = 'Notification'",
-  "class_g = 'Dunst'",
+  #"class_g = 'Dunst'",
   "class_g = 'Rofi'",
   "class_g ?= 'Notify-osd'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
 
-## Shadow
+## Fading
 fading = false
 fade-in-step = 0.03;
 fade-out-step = 0.02;
@@ -50,13 +50,13 @@ focus-exclude = [
 
 
 ## Blur
-blur: {
-  method = "kawase";
-  strength = 5;
-  background = true;
-  background-frame = false;
-  background-fixed = false;
-}
+#blur: {
+#  method = "kawase";
+#  strength = 5;
+#  background = true;
+#  background-frame = false;
+#  background-fixed = false;
+#}
 
 
 backend = "glx";
@@ -72,33 +72,33 @@ use-damage = true
 log-level = "warn";
 
 
-blur-kern = "3x3box";
-blur-background-exclude = [
-  "window_type = 'dock' && name != 'polybar-workspace_eDP1'",
-  "window_type = 'dock'",
-  "name = 'dzen slave'",
-  "class_g = 'Rofi'",
-  "class_g = 'slop'",
-  "class_g = 'scratchpad'",
-  "class_g = 'lf'",
-  "class_g = 'taskbook'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+#blur-kern = "3x3box";
+#blur-background-exclude = [
+#  "window_type = 'dock' && name != 'polybar-workspace_eDP1'",
+#  "window_type = 'dock'",
+#  "name = 'dzen slave'",
+#  "class_g = 'Rofi'",
+#  "class_g = 'slop'",
+#  "class_g = 'scratchpad'",
+#  "class_g = 'lf'",
+#  "class_g = 'taskbook'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
-corner-radius = 15.0;
-rounded-corners-exclude = [
-  "name = 'polybar-workspace_eDP1'",
-  "class_g = 'Dragon-drag-and-drop'",
-  "window_type = 'popup_menu'",
-  "window_type = 'dropdown_menu'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+#corner-radius = 15.0;
+#rounded-corners-exclude = [
+#  "name = 'polybar-workspace_eDP1'",
+#  "class_g = 'Dragon-drag-and-drop'",
+#  "window_type = 'popup_menu'",
+#  "window_type = 'dropdown_menu'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
 wintypes:
 {
-tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   polybar = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 1; }
+  dropdown_menu = { opacity = 1; }
 };
