--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -21,6 +21,9 @@ ytdl-format=bestvideo[ext=mp4][height<=720]+bestaudio/best[height<=720]
 [extension.webm]
 loop-file=yes
 
+[extension.mp4]
+loop-file=yes
+
 [extension.gifv]
 loop-file=yes
 
