--- a/thinkpad-x250/local.conf
+++ b/thinkpad-x250/local.conf
@@ -5,26 +5,23 @@
   <edit mode="assign" name="rgba">
    <const>rgb</const>
   </edit>
- </match>
- <match target="font">
   <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
- </match>
- <match target="font">
+  <edit mode="assign" name="autohint" >
+   <bool>false</bool>
+  </edit>
   <edit mode="assign" name="hintstyle">
    <const>hintslight</const>
   </edit>
- </match>
- <match target="font">
   <edit mode="assign" name="antialias">
    <bool>true</bool>
   </edit>
+  <edit mode="assign" name="lcdfilter">
+    <const>lcddefault</const>
+  </edit>
+  <edit mode="assign" name="dpi">
+    <double>96</double>
+  </edit>
  </match>
-  <match target="font">
-    <edit mode="assign" name="lcdfilter">
-      <const>lcddefault</const>
-    </edit>
-  </match>
 </fontconfig>
-
