--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,4 +1,17 @@
-## Shadown
+
+#  ██▓███   ██▓ ▄████▄   ▒█████   ███▄ ▄███▓
+# ▓██░  ██▒▓██▒▒██▀ ▀█  ▒██▒  ██▒▓██▒▀█▀ ██▒
+# ▓██░ ██▓▒▒██▒▒▓█    ▄ ▒██░  ██▒▓██    ▓██░
+# ▒██▄█▓▒ ▒░██░▒▓▓▄ ▄██▒▒██   ██░▒██    ▒██ 
+# ▒██▒ ░  ░░██░▒ ▓███▀ ░░ ████▓▒░▒██▒   ░██▒
+# ▒▓▒░ ░  ░░▓  ░ ░▒ ▒  ░░ ▒░▒░▒░ ░ ▒░   ░  ░
+# ░▒ ░      ▒ ░  ░  ▒     ░ ▒ ▒░ ░  ░      ░
+# ░░        ▒ ░░        ░ ░ ░ ▒  ░      ░   
+#           ░  ░ ░          ░ ░         ░   
+#              ░                            
+
+
+## SHADOW
 shadow = true;
 shadow-radius = 25;
 shadow-offset-x = -20;
@@ -6,14 +19,13 @@ shadow-offset-y = -15;
 shadow-red = .1
 shadow-exclude = [
   "name = 'Notification'",
-  #"class_g = 'Dunst'",
   "class_g = 'Rofi'",
   "class_g ?= 'Notify-osd'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
 
-## Fading
+## FADING
 fading = false
 fade-in-step = 0.03;
 fade-out-step = 0.02;
@@ -23,14 +35,13 @@ fade-exclude = [
 ]
 
 
-## Opacity
+## OPACITY
 inactive-dim = 0.4;
 active-dim = 0.0;
 inactive-dim-fixed =true;
-opacity-rule = [
-    "00:class_g = 'dzen'"
-    ];
 
+
+## FOCUS
 focus-exclude = [
   "window_type = 'dock'",
   "class_g = 'Dmenu'",
@@ -49,16 +60,7 @@ focus-exclude = [
 ];
 
 
-## Blur
-#blur: {
-#  method = "kawase";
-#  strength = 5;
-#  background = true;
-#  background-frame = false;
-#  background-fixed = false;
-#}
-
-
+## GENERAL
 backend = "glx";
 vsync = true
 mark-wmwin-focused = true;
@@ -71,32 +73,9 @@ detect-client-leader = false
 use-damage = true
 log-level = "warn";
 
-
-#blur-kern = "3x3box";
-#blur-background-exclude = [
-#  "window_type = 'dock' && name != 'polybar-workspace_eDP1'",
-#  "window_type = 'dock'",
-#  "name = 'dzen slave'",
-#  "class_g = 'Rofi'",
-#  "class_g = 'slop'",
-#  "class_g = 'scratchpad'",
-#  "class_g = 'lf'",
-#  "class_g = 'taskbook'",
-#  "_GTK_FRAME_EXTENTS@:c"
-#];
-
-#corner-radius = 15.0;
-#rounded-corners-exclude = [
-#  "name = 'polybar-workspace_eDP1'",
-#  "class_g = 'Dragon-drag-and-drop'",
-#  "window_type = 'popup_menu'",
-#  "window_type = 'dropdown_menu'",
-#  "_GTK_FRAME_EXTENTS@:c"
-#];
-
 wintypes:
 {
-tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   polybar = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
