--- a/thinkpad-x250/modules_x250.conf
+++ b/thinkpad-x250/modules_x250.conf
@@ -1,4 +1,4 @@
-options iwlwifi power_save=1 power_scheme=3 bt_coex_active=0 11ndisable=1
+options iwlwifi power_save=1 power_scheme=3 11ndisable=1
 options snd_hda_intel power_save=1
 options snd_mia index=0
 options snd_hda_intel index=1
