--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -62,7 +62,8 @@ focus-exclude = [
 
 ## GENERAL
 backend = "glx";
-vsync = true
+vsync = true;
+corner-radius = 7.0;
 mark-wmwin-focused = true;
 mark-ovredir-focused = false;
 detect-rounded-corners = true;
