[ADDED] fzf opener

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -56,7 +56,7 @@ focus-exclude = [
   "class_g = 'Zathura'",
   "class_g = 'Steam'",
   "class_g = 'mpv'",
-  "class_g = 'lf'"
+  "class_g = 'nnn'"
 ];
 
 
