--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -10,12 +10,15 @@
 #        ░                  ░     ░ ░          ░ ░           ░         
 #                          ░      ░                                    
 
-profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-correct-downscaling=yes
-volume-max=100
-hwdec=vaapi
+scale=bilinear
+cscale=bilinear
+dscale=bilinear
+scale-antiring=0
+cscale-antiring=0
+dither-depth=no
+correct-downscaling=no
+sigmoid-upscaling=no
+deband=no
 ytdl-format=bestvideo[ext=mp4][height<=720]+bestaudio/best[height<=720]
 
 [extension.webm]
