--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -24,21 +24,14 @@ shadow-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-
 ## FADING
 fading = false
-fade-in-step = 0.03;
-fade-out-step = 0.02;
-fade-delta = 5;
-fade-exclude = [
-" class_g != 'Pcmanfm' && class_g != 'i3lock' && class_g != 'search' && class_g != 'lf' && class_g != 'mpv' && class_g != 'taskbook' && class_g != 'scratchpad' && name != 'Notification' && class_g != 'Dunst' && ! class_g ?= 'Notify-osd'&& class_g != 'Polybar' && class_g != 'Rofi' && name != 'dzen slave'"
-]
 
 
 ## OPACITY
 inactive-dim = 0.4;
 active-dim = 0.0;
-inactive-dim-fixed =true;
+inactive-dim-fixed = true;
 
 
 ## FOCUS
@@ -76,7 +69,7 @@ log-level = "warn";
 
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
+  tooltip = { shadow = true; opacity = 1; focus = true; full-shadow = false; };
   polybar = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
